2Semestre/C/Bloco 2 Introdução ao ANTLR-20210408/bloco2/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;
program : stat* EOF;
stat : expr? NEWLINE;
expr:  op=('*'|'/'|'+'|'-') expr expr #operators
    | Number                        #Numbers;

Number: [0-9]+('.'[0-9]+);
NEWLINE: '\r'? '\n';
WSS : [ \t]+ -> skip;
